<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/opening_q3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/button_third"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_third">

            <RadioButton
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_a3_a" />

            <RadioButton
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_a3_b" />

            <RadioButton
                android:id="@+id/a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_a3_c" />

            <RadioButton
                android:id="@+id/a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_a3_d" />

            <RadioButton
                android:id="@+id/a5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_a3_e" />
        </RadioGroup>

        <Button
            android:id="@+id/button_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/next"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>