<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.odmtavern.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.odmtavern.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
        </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.odmtavern.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_IntroFragment"
            app:destination="@id/IntroFragment" />
    </fragment>
    <fragment
        android:id="@+id/IntroFragment"
        android:name="com.example.odmtavern.IntroFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_intro">

        <action
            android:id="@+id/action_IntroFragment_to_GameFragment"
            app:destination="@id/GameFragment" />
    </fragment>
    <fragment
        android:id="@+id/GameFragment"
        android:name="com.example.odmtavern.GameFragment"

        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_GameFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>